--- a/templates/base.html
+++ b/templates/base.html
@@ -7,15 +7,15 @@
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
   <meta name="apple-mobile-web-app-capable" content="yes"/>
   <meta name="apple-mobile-web-app-status-bar-style" content="black"/>
-  <script src="{{ STATIC_URL }}js/jquery.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/jquery.ba-hashchange.min.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
-  <link rel="stylesheet" href="{{ STATIC_URL }}bootstrap/css/bootstrap.min.css" type="text/css" media="screen"/>
+  <script src="{{ STATIC_URL }}base/js/jquery.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}base/js/jquery.ba-hashchange.min.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}base/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}base/js/bootstrap.js" type="text/javascript"></script>
+  <link rel="stylesheet" href="{{ STATIC_URL }}base/bootstrap/css/bootstrap.min.css" type="text/css" media="screen"/>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic' type='text/css'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700' type='text/css'>
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/icons.css" type="text/css" media="screen"/>
-  <link rel="stylesheet" href="{{ STATIC_URL }}css/screen.css" type="text/css" media="screen"/>
+  <link rel="stylesheet" href="{{ STATIC_URL }}base/css/icons.css" type="text/css" media="screen"/>
+  <link rel="stylesheet" href="{{ STATIC_URL }}base/css/screen.css" type="text/css" media="screen"/>
 {% endblock %}
 
 {% block body %}
