Allow inline rendering in pages.
Change-Id: I7a9c36670f313cfe7213254f751771e8c6e8a080

--- a/templates/base/page_detail.html
+++ b/templates/base/page_detail.html
@@ -10,6 +10,6 @@
   {% if object.show_publish %}
     <p class="muted">{{ object.publish|date:"j F Y" }}</p>
   {% endif %}
-  {% load stringutils %}
-  {{ object.body|format_text }}
+  {% load inlines markup %}
+  {{ object.body|render_inlines|markdown }}
 {% endblock %}
