--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,7 @@
   <script src="{{ STATIC_URL }}base/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="{{ STATIC_URL }}base/js/bootstrap.js" type="text/javascript"></script>
   <link rel="stylesheet" href="{{ STATIC_URL }}base/bootstrap/css/bootstrap.min.css" type="text/css" media="screen"/>
+  <link rel="stylesheet" href="{{ STATIC_URL }}base/bootstrap/css/bootstrap-responsive.min.css" type="text/css" media="screen"/>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:300,700,300italic' type='text/css'>
   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700' type='text/css'>
   <link rel="stylesheet" href="{{ STATIC_URL }}base/css/icons.css" type="text/css" media="screen"/>
