--- a/templates/base/page_detail.html
+++ b/templates/base/page_detail.html
@@ -3,6 +3,7 @@
 {% block title %}{{ object.title }}{% endblock %}
 {% block body_class %}{{ block.super }} {{ object.slug }} page{% endblock %}
 {% block body_id %}{{ object.slug }}{% endblock %}
+{% block meta_author %}{{ object.author.get_full_name }}{% endblock %}
 
 {% block content_title %}<h2>{{ object.title }}</h2>{% endblock %}
 
