--- a/templates/base/page_detail.html
+++ b/templates/base/page_detail.html
@@ -4,6 +4,7 @@
 {% block body_class %}{{ block.super }} {{ object.slug }} page{% endblock %}
 {% block body_id %}{{ object.slug }}{% endblock %}
 {% block meta_author %}{{ object.author.get_full_name }}{% endblock %}
+{% block meta_keywords %}{{ object.keywords }}{% endblock %}
 
 {% block content_title %}<h2>{{ object.title }}</h2>{% endblock %}
 
