Make the home page look like Cover template
Change-Id: Ieb2e01ff7f6996aa48af31fd267e7c5d023108f2

--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -1,6 +1,6 @@
 {% extends "base/page_detail.html" %}
 
 {% block content_title %}{% endblock %}
-{% block content %}
-{{ block.super }}
-{% endblock %}
+{% block page_class %}cover-container d-flex w-100 p-3 mx-auto flex-column{% endblock %}
+{% block navbar_class %}navbar navbar-expand-md navbar-dark bg-dark mb-auto{% endblock %}
+{% block container_class %}cover-container d-flex w-100 p-3 mx-auto flex-column{% endblock %}
