--- a/templates/base/home.html
+++ b/templates/base/home.html
@@ -1,6 +1,8 @@
 {% extends "base/page_detail.html" %}
 
+{% block html_class %}{{ block.super }} w-100 h-100 d-flex{% endblock %}
+{% block body_class %}{{ block.super }} w-100 h-100 d-flex{% endblock %}
 {% block content_title %}{% endblock %}
 {% block page_class %}cover-container d-flex w-100 p-3 mx-auto flex-column{% endblock %}
-{% block navbar_class %}navbar navbar-expand-md navbar-dark bg-dark mb-auto{% endblock %}
+{% block navbar_class %}navbar navbar-expand-md navbar-dark bg-transparent mb-auto{% endblock %}
 {% block container_class %}cover-container d-flex w-100 p-3 mx-auto flex-column{% endblock %}
