--- a/templates/base/page_detail.html
+++ b/templates/base/page_detail.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
 {% block title %}{{ object.title }}{% endblock %}
+{% block meta_og_title %}{{ object.title }}{% endblock %}
 {% block body_class %}{{ block.super }} {{ object.slug }} page{% endblock %}
 {% block body_id %}{{ object.slug }}{% endblock %}
 {% block meta_author %}{{ object.author.get_full_name }}{% endblock %}
